corrects alignment

--- a/css/hola.css
+++ b/css/hola.css
@@ -49,7 +49,7 @@ text-align: center;
   position: absolute;
   top: 28px;
   width: 33px;
-  right: 60px;
+  right: 30px;
 }
 
 
